--- a/albums/src/App.css
+++ b/albums/src/App.css
@@ -3,3 +3,51 @@
   padding: 0;
   box-sizing: border-box;
 }
+.header{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  margin-top: 10%;
+  text-align: center;
+}
+
+.album-list{
+margin-top: 10%;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+justify-content: center;
+grid-gap: 30px;
+}
+.album-card-container{
+  display: flex;
+  justify-content: center;
+}
+
+.album-card{
+  text-align: center;
+  border: solid black 1px;
+}
+.album-thumbnail{
+  border-bottom: solid black 1px;
+}
+.album-name{
+  text-decoration: none;
+}
+
+/* 
+ALBUM DETAILS */
+
+.album-detail-container{
+  display: flex;
+
+}
+
+.album-nav-side{
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+padding-left: 10px;
+padding-right: 10px;
+margin-right: 15%;
+border-right: solid black 1px;
+}
+
