--- a/albums/src/App.css
+++ b/albums/src/App.css
@@ -65,3 +65,44 @@ flex-flow: row wrap;
   flex-shrink: 0;
   flex-basis: 30%;
 }
+
+
+/* MODAL */
+
+.modal{
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal.open{
+  opacity: 1;
+  pointer-events: all;
+}
+
+.full-img{
+  position: absolute;
+  height: 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: all 0.25s ease-out;
+}
+
+full-img.open{
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal p{
+  color: white;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, -5%);
+
+}
